# Forward

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  README_CN.md  README_EN.md  VS2017.bat  VS2019.bat  build.sh
demo/fwd_cpp/: CMakeLists.txt  ReadMe.md  ReadMe_CN.md  build.sh  test_fwd.cpp  test_fwd_engine.cpp  test_fwd_onnx.cpp  test_fwd_tf.cpp  test_fwd_torch.cpp
demo/fwd_cpp/data/: ReadMe.md
demo/fwd_cpp/include/: cuda_helper.h  tf_helper.h  torch_engine.h  trt_fwd_engine.h
demo/fwd_cpp/include/common/: common_macros.h  fwd_common.h  fwd_utils.h  i_forward_api.h  trt_common.h  trt_utils.h
demo/fwd_cpp/libs/: ReadMe.md
demo/fwd_cpp/tensorflow/: ReadMe.md
source/fwd_keras/: CMakeLists.txt
source/fwd_keras/keras_cvt/: keras_cpp_api.cpp  keras_cpp_api.h  trt_keras_parser.cpp  trt_keras_parser.h
source/fwd_keras/keras_cvt/keras_desc_creators/: i_keras_layer_creator.h  keras_activation_creator.h  keras_batch_norm_creator.h  keras_clamp_creator.h  keras_concatenation_creator.h  keras_convolution_creator.h  keras_dense_creator.h  keras_element_wise_creator.h  keras_gather_creator.h  keras_identity_creator.h  keras_noop_creator.h  keras_pad_creator.h  keras_pooling_creator.h  keras_reduce_creator.h  keras_rnn_creator.h  keras_separable_conv_creator.h  keras_shuffle_creator.h  keras_slice_creator.h  keras_softmax_creator.h
source/fwd_keras/keras_engine/: keras_engine.cpp  keras_engine.h
source/fwd_onnx/: CMakeLists.txt
source/fwd_onnx/onnx_engine/: onnx_engine.cpp  onnx_engine.h
source/fwd_tf/: CMakeLists.txt
source/fwd_tf/tf_cvt/: tf_cpp_api.cpp  tf_cpp_api.h  tf_desc_manager.cpp  tf_desc_manager.h  tf_graph.cpp  tf_graph.h  tf_graph_parser.cpp  tf_graph_parser.h  tf_utils.cpp  tf_utils.h
source/fwd_tf/tf_cvt/tf_desc_creators/: i_tf_layer_creator.h  tf_activation_creator.h  tf_batch_norm_creator.h  tf_bert_creator.h  tf_clamp_creator.h  tf_concatenation_creator.h  tf_constant_creator.h  tf_convolution_creator.h  tf_dense_creator.h  tf_element_wise_creator.h  tf_embedding_bag_creator.h  tf_gather_creator.h  tf_identity_creator.h  tf_matmul_creator.h  tf_noop_creator.h  tf_pad_creator.h  tf_pooling_creator.h  tf_reduce_creator.h  tf_select_creator.h  tf_shuffle_creator.h  tf_slice_creator.h  tf_softmax_creator.h  tf_split_creator.h  tf_topk_creator.h  tf_unary_creator.h
source/fwd_tf/tf_engine/: tf_engine.cpp  tf_engine.h  tf_infer.h
source/fwd_torch/: CMakeLists.txt  fwd_torch_renaming.h  torch_version.h
source/fwd_torch/torch_cvt/: torch_desc_manager.cpp  torch_desc_manager.h  torch_helper.h  torch_module.cpp  torch_module.h  torch_module_parser.cpp  torch_module_parser.h  torch_submodule.cpp  torch_submodule.h
source/fwd_torch/torch_cvt/torch_desc_creators/: i_torch_layer_creator.h  torch_activation_creator.h  torch_adaptive_lin_creator.h  torch_adaptive_pool_creator.h  torch_bert_creator.h  torch_cast_creator.h  torch_clamp_creator.h  torch_concatenation_creator.h  torch_constant_creator.h  torch_constant_pad_creator.h  torch_convolution_creator.h  torch_element_wise_creator.h  torch_embedding_bag_creator.h  torch_gather_creator.h  torch_gelu_creator.h  torch_grid_sampler_creator.h  torch_identity_creator.h  torch_index_creator.h  torch_linear_creator.h  torch_lrn_creator.h  torch_matrix_multiply_creator.h  torch_noop_creator.h  torch_norm_creator.h  torch_normalization_creator.h  torch_pooling_creator.h  torch_prelu_creator.h  torch_reduce_creator.h  torch_reflection_pad_creator.h  torch_repeat_creator.h  torch_resize_creator.h  torch_rnn_creator.h  torch_shuffle_creator.h  torch_slice_creator.h  torch_softmax_creator.h  torch_split_creator.h  torch_submodule_creator.h  torch_unary_creator.h  torch_upsample_bilinear_creator.h
source/fwd_torch/torch_cvt/torch_passes/: fold_floor_divide.cpp  fold_floor_divide.h  fuse_adaptive_lin.cpp  fuse_adaptive_lin.h  fuse_lrn.cpp  fuse_lrn.h  fuse_transformer_encoder.cpp  fuse_transformer_encoder.h
source/fwd_torch/torch_engine/: torch_engine.cpp  torch_infer.h
source/py_fwd/: CMakeLists.txt  py_batch_stream.h  py_forward.cpp  py_forward_keras.h  py_forward_onnx.h  py_forward_tf.h  py_forward_torch.h  py_utils.h
source/test_fwd/: CMakeLists.txt  image.cpp  image.h  img_batch_stream.h  test_fwd.cpp
source/trt_engine/: CMakeLists.txt
source/trt_engine/trt_common/: trt_common.h  trt_logger.cpp  trt_logger.h  trt_meta_data.cpp  trt_meta_data.h  trt_profiler.cpp  trt_profiler.h
source/trt_engine/trt_engine/: trt_buffer_manager.h  trt_fwd_builder.cpp  trt_fwd_builder.h  trt_fwd_engine.cpp  trt_fwd_engine.h
source/trt_engine/trt_network_crt/: trt_creator_manager.cpp  trt_creator_manager.h  trt_network_creator.cpp  trt_network_creator.h
source/trt_engine/trt_network_crt/layer_creators/: i_trt_layer_creator.h  trt_activation_creator.h  trt_adaptive_lin_creator.h  trt_adaptive_pool_creator.h  trt_bert_creator.h  trt_cast_creator.h  trt_clamp_creator.h  trt_concatenation_creator.h  trt_constant_creator.h  trt_constant_pad_creator.h  trt_convolution_creator.h  trt_deconvolution_creator.h  trt_element_wise_creator.h  trt_embedding_bag_creator.h  trt_fully_connected_creator.h  trt_gather_creator.h  trt_gelu_creator.h  trt_grid_sampler_creator.h  trt_identity_creator.h  trt_index_creator.h  trt_input_creator.h  trt_lrn_creator.h  trt_mat_mul_add_creator.h  trt_matrix_multiply_creator.h  trt_norm_creator.h  trt_normalization_creator.h  (+19 more)
source/unit_test/: CMakeLists.txt  test_batch_stream.h  test_keras_nodes.h  test_keras_vision.h  test_onnx_bert.h  test_onnx_dynamic.h  test_onnx_models.h  test_tf_bert.h  test_tf_nodes.h  test_tf_nodes_fp16.h  test_tf_nodes_int8.h  test_tf_recommender.h  test_tf_vision.h  test_torch_bert.h  test_torch_dlrm.h  test_torch_nodes.h  test_torch_nodes_fp16.h  test_torch_nodes_int8.h  test_torch_seg.h  test_torch_tuple_inputs.h  test_torch_vision.h  test_torch_vision_fp16.h  test_torch_vision_int8.h  unit_test.cpp  unit_test.h  unit_test_keras_helper.h  unit_test_onnx_helper.h  unit_test_tf_helper.h  unit_test_torch_helper.h
(+386 files in other folders)
